--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-bootstrap": "^0.32.37",
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.477.0",
     "node-vibrant": "^4.0.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
